--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
   })(document.getElementById('pinkboard'));
 </script>
 <div class="namebox">
-  <h1>某某某人&#10084;&#65039;某某人</h1>
+  <h1>某某人&#10084;&#65039;某某人</h1>
 </div>
 </body>
 </html>
