--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/fromann/CDN@main/img/logo.ico">
-    <title>给舅舅舅妈麦多的&#10084;&#65039;</title>
+    <title>给舅舅舅妈弟弟的&#10084;&#65039;</title>
     <script src="https://cdn.jsdelivr.net/gh/zyoushuo/Blog/hexo/js/mouse_slide.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/zyoushuo/Blog/hexo/js/clicklove.js"></script>
   <style type="text/css">
@@ -270,7 +270,7 @@
   })(document.getElementById('pinkboard'));
 </script>
 <div class="namebox">
-  <h1>舅舅舅妈麦多国庆快乐</h1>
+  <h1>舅舅舅妈弟弟国庆快乐</h1>
 </div>
 </body>
 </html>
